Fixing bug 305640. Make document.getElementById() work correctly when the hash changes when flushing. r+sr=bzbarsky@mit.edu